<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/btn_chart_new_match"
            style="@style/mainMenuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/new_match_bg"
            android:text="@string/chart_new_match"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/mainMenuButton"
            android:id="@+id/btn_review_matches"
            android:layout_width="0dp"
            android:background="@drawable/review_bg"
            android:layout_height="match_parent"
	        android:layout_weight="1"
            android:text="@string/review_matches" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/btn_help"
            style="@style/mainMenuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/help_bg"
            android:text="@string/help"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/mainMenuButton"
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:background="@drawable/settings_bg"
            android:layout_height="match_parent"
	        android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>
